[package]
name = "tfhe_example"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.7.3", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }